@@ -1267,7 +1267,7 @@ packet_ver: 23
 
 //2008-12-10aSakexe
 0x0442,-1
-0x0443,8
+0x0443,8,skillselectmenu,2:6
 
 //2009-01-14aSakexe
 0x043f,25
@@ -1323,13 +1323,6 @@ packet_ver: 25
 0x043d,8
 //0x043e,-1
 0x043f,8
-
-//2008-12-17aRagexeRE
-0x01a2,37
-0x0440,10
-//0x0441,4
-//0x0442,8
-//0x0443,8
 
 //2008-12-17bRagexeRE
 0x006d,114
